@@ -23,7 +23,7 @@ use HTML::FormFu::ObjectUtil qw(
     parent
     get_parent
 );
-use HTML::FormFu::Util qw( require_class xml_escape process_attrs );
+use HTML::FormFu::Util qw( require_class xml_escape process_attrs _merge_hashes );
 use Clone ();
 use Scalar::Util qw( refaddr weaken );
 use Carp qw( croak );
@@ -134,6 +134,106 @@ sub get_output_processor {
     my $self = shift;
 
     return $self->form->get_output_processor(@_);
+}
+
+sub _match_default_args {
+    my ( $self, $defaults ) = @_;
+
+    return {} if !$defaults || !%$defaults;
+
+    # apply any starting with 'Block', 'Field', 'Input' first, each longest first
+    my @block = sort { length $a <=> length $b } grep { $_ =~ /^Block/ } keys %$defaults;
+    my @field = sort { length $a <=> length $b } grep { $_ =~ /^Field/ } keys %$defaults;
+    my @input = sort { length $a <=> length $b } grep { $_ =~ /^Input/ } keys %$defaults;
+
+    my %others = map { $_ => 1 } keys %$defaults;
+    map {
+        delete $others{$_}
+    } @block, @field, @input;
+
+    # apply remaining keys, longest first
+    my $arg = {};
+
+KEY:
+    for my $key ( @block, @field, @input, sort { length $a <=> length $b } keys %others ) {
+        my @type = split qr{\|}, $key;
+        my $match;
+
+TYPE:
+        for my $type (@type) {
+            my $not_in;
+            my $is_in;
+            if ( $type =~ s/^-// ) {
+                $not_in = 1;
+            }
+            elsif ( $type =~ s/^\+// ) {
+                $is_in = 1;
+            }
+
+            my $check_parents = $not_in || $is_in;
+
+            if ( $self->_match_default_args_type( $type, $check_parents ) ) {
+                if ( $not_in ) {
+                    next KEY;
+                }
+                else {
+                    $match = 1;
+                    next TYPE;
+                }
+            }
+        }
+
+        if ( $match ) {
+            $arg = _merge_hashes( $arg, $defaults->{$key} );
+        }
+    }
+
+    return $arg;
+}
+
+sub _match_default_args_type {
+    my ( $self, $type, $check_parents ) = @_;
+
+    my @target;
+    if ( $check_parents ) {
+        my $self = $self;
+        while ( defined ( my $parent = $self->parent ) ) {
+            last if !$parent->isa('HTML::FormFu::Element');
+            push @target, $parent;
+            $self = $parent;
+        }
+    }
+    else {
+        @target = ($self);
+    }
+
+    for my $target (@target) {
+        # handle Block default_args
+        if ( 'Block' eq $type
+            && $target->isa('HTML::FormFu::Element::Block') )
+        {
+            return 1;
+        }
+
+        # handle Field default_args
+        if ( 'Field' eq $type
+            && $target->does('HTML::FormFu::Role::Element::Field') )
+        {
+            return 1;
+        }
+
+        # handle Input default_args
+        if ( 'Input' eq $type
+            && $target->does('HTML::FormFu::Role::Element::Input') )
+        {
+            return 1;
+        }
+
+        # handle explicit default_args
+        if ( $type eq $target->type ) {
+            return 1;
+        }
+    }
 }
 
 sub clone {
